--- a/src/html/index.html
+++ b/src/html/index.html
@@ -33,4 +33,186 @@
     </a>
 </section>
 
+<section class="info">
+    <div class="info__body container">
+        <div class="info__anchors d-flex flex-align-center flex-justify-center">
+            <a href="#program"
+               class="info__anchor text text--medium text--primary text--w-semibold text--uppercase d-flex flex-justify-center flex-align-center">
+                Программа
+                <svg width="36" height="36" class="button__icon">
+                    <use href="./img/svgsprite/sprite.symbol.svg#arrow-down"></use>
+                </svg>
+            </a>
+            <a href="#program"
+               class="info__anchor  text text--medium text--primary text--w-semibold text--uppercase d-flex flex-justify-center flex-align-center">
+                Спикеры
+                <svg width="36" height="36">
+                    <use href="./img/svgsprite/sprite.symbol.svg#arrow-down"></use>
+                </svg>
+            </a>
+        </div>
+    </div>
+    <div class="info__outer">
+        <div class="info__inner container">
+            <h3 class="info__title text text--large text--primary text--w-medium text--uppercase">
+                <span class="text text--secondary">Данные – это сердце и кровеносная система</span> IT-архитектуры, питающая бизнес жизненно важными ресурсами.
+            </h3>
+            <p class="info__description text text--large text--primary text--w-regular">
+                Эффективное управление ими укрепляет иммунитет компании, помогает достигать высоких результатов, обеспечивать лидерство и открывать новые возможности для развития.
+            </p>
+            <h3 class="info__title text text--large text--secondary text--w-medium text--uppercase">
+                17 апреля приглашаем вас на Дата Саммит «Пульс данных»!
+            </h3>
+            <p class="info__description text text--large text--primary text--w-regular">
+                Эксперты ведущих компаний и госструктур (к участию приглашены представители Минцифры, Сбербанка, Росатома, Ростеха, Роснефти, Axenix и других крупнейших игроков рынка) — поделятся практическим опытом внедрения решений для управления данными, обсудят ключевые тренды и перспективы.
+            </p>
+        </div>
+    </div>
+    <div class="info__wrapper-invite container">
+        <div class="info__invite d-flex flex-align-center flex-justify-center">
+            <div class="info__invite-arrow d-flex flex-justify-center flex-align-center">
+                <svg width="27" height="34">
+                    <use href="./img/svgsprite/sprite.symbol.svg#curved-arrow-right"></use>
+                </svg>
+            </div>
+            <div class="info__invite-description text text--large text--orange text--w-semibold">
+                Присоединяйтесь, чтобы почувствовать пульс ваших данных! Участвовать можно как лично, так и онлайн.
+            </div>
+            <div class="info__invite-arrow d-flex flex-justify-center flex-align-center">
+                <svg width="27" height="34">
+                    <use href="./img/svgsprite/sprite.symbol.svg#curved-arrow-left"></use>
+                </svg>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="sponsors">
+    <div class="sponsors__body container">
+        <div class="sponsors__items d-flex flex-align-center flex-justify-center">
+            <div class="sponsors__item">
+                <img src="./img/sponsors/univers.png" alt="" class="sponsors__logo">
+            </div>
+            <div class="sponsors__item">
+                <img src="./img/sponsors/selena.png" alt="" class="sponsors__logo">
+            </div>
+            <div class="sponsors__item">
+                <img src="./img/sponsors/dataflot.png" alt="" class="sponsors__logo">
+            </div>
+            <div class="sponsors__item">
+                <img src="./img/sponsors/data-innovation.png" alt="" class="sponsors__logo">
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="speakers">
+    <div class="speakers__body container">
+        <h3 class="speakers__heading title title--primary title--large title--w-regular title--uppercase text-center">
+            Спикеры
+        </h3>
+        <div class="speakers__items">
+            <div class="speakers__item">
+                <div class="speakers__item-pic">
+                    <picture>
+                        <img src="./img/speakers/speaker-1.png" alt="">
+                    </picture>
+                </div>
+                <div class="speakers__item-logo d-flex flex-justify-center flex-align-center">
+                    <img src="./img/speakers/ydata.png" alt="" class="speakers__item-logo-img">
+                </div>
+                <div class="speakers__item-info">
+                    <h3 class="speakers__item-name text text--medium text--primary text--w-semibold">
+                        Евгений Бурнаев
+                    </h3>
+                    <div class="speakers__item-position text text--small text--primary text--w-medium">
+                        Профессор, руководитель центраприкладного ИИ Сколтеха
+                    </div>
+                </div>
+            </div>
+            <div class="speakers__item">
+                <div class="speakers__item-pic">
+                    <picture>
+                        <img src="./img/speakers/speaker-1.png" alt="">
+                    </picture>
+                </div>
+                <div class="speakers__item-logo d-flex flex-justify-center flex-align-center">
+                    <img src="./img/speakers/rostelecom.png" alt="" class="speakers__item-logo-img">
+                </div>
+                <div class="speakers__item-info">
+                    <h3 class="speakers__item-name text text--medium text--primary text--w-semibold">
+                        Евгений Бурнаев
+                    </h3>
+                    <div class="speakers__item-position text text--small text--primary text--w-medium">
+                        Профессор, руководитель центраприкладного ИИ Сколтеха
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="tracks">
+    <div class="tracks__body container">
+        <div class="tracks__top d-flex flex-align-center">
+            <h3 class="tracks__heading title title--uppercase title--w-semibold">
+                3 трека
+            </h3>
+            <div class="tracks__arrow d-flex flex-justify-center flex-align-center">
+                <svg width="32" height="26">
+                    <use href="./img/svgsprite/sprite.symbol.svg#curved-arrow-down"></use>
+                </svg>
+            </div>
+            <div class="tracks__onof d-flex d-flex-column">
+                <span class="tracks__offline title title--uppercase title--w-semibold">
+                    Оффлайн
+                </span>
+                <span class="tracks__online title title--uppercase title--w-semibold">
+                    Онлайн
+                </span>
+            </div>
+        </div>
+        <div class="tracks__grid">
+            <div class="tracks__item">
+                <div class="tracks__item-inner">
+                    <h3 class="tracks__item-title title title--pre-big title--primary title--w-medium title--uppercase">
+                        Пленарная сессия
+                    </h3>
+                    <p class="tracks__item-excerpt text text--medium text--primary text--w-semibold">
+                        Культура управления данными, ценность данных, регулирование в области управления данными и наращивание эффективности от использования данных компаний.
+                    </p>
+                </div>
+            </div>
+            <div class="tracks__item">
+                <div class="tracks__item-pic">
+                    <img src="./img/decor/track-decor-item-two.png" alt="">
+                    <img class="tracks__item-decor" src="./img/decor/tracks-decor-ellipse.png" alt="">
+                </div>
+                <div class="tracks__item-info">
+                    <h3 class="tracks__item-title title title--pre-big title--primary title--w-medium title--uppercase">
+                        Технологическая сессия
+                    </h3>
+                    <p class="tracks__item-excerpt text text--medium text--primary text--w-semibold">
+                        Современные инструменты управления данными: от Data Warehouse и Data Lakehouse до Data Governance. Практики по профилированию, очистке и трансформации данных.
+                    </p>
+                </div>
+            </div>
+            <div class="tracks__item">
+                <div class="tracks__item-pic">
+                    <img src="./img/decor/track-decor-item-tree.png" alt="">
+                    <img class="tracks__item-decor" src="./img/decor/tracks-decor-ellipse.png" alt="">
+                </div>
+                <div class="tracks__item-info">
+                    <h3 class="tracks__item-title title title--pre-big title--primary title--w-medium title--uppercase">
+                        Бизнес- <br> сессия
+                    </h3>
+                    <p class="tracks__item-excerpt text text--medium text--primary text--w-semibold">
+                        Стоимость и ценность данных, риски, гигиена работы с ними. Дискуссии о роли CDO, цифровом следе, управлении активами и ключевых показателях.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 @@include('blocks/footer.html')
