--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -147,20 +147,59 @@
 </div>
 
 <footer class="footer js-reveal gs-reveal">
-	<div class="footer__bottom">
-		<div class="footer__bottom-wrap container">
-			<div class="footer__bottom-inner d-flex flex-justify-sb flex-align-center">
-				<div class="footer__copyright text text--normal text--w-regular">
-					© 2024 Стартовый шаблон.
-					<br>
-					Все права защищены.
+	<div class="footer__body container">
+		<div class="footer__columns d-flex flex-justify-sb">
+			<div class="footer__col">
+				<div class="footer__title text text--normal text--primary text--w-regular text--uppercase">
+					О нас
 				</div>
-				<div class="footer__links text text--small text--w-regular">
-					<a href="" class="footer__link-policy">
-						Политика конфиденциальности
+				<div class="footer__excerpt text text--normal text--primary text--w-medium">
+					Решения по управлению данными, бизнес-аналитике, защите информации и управлению знаниями.
+					<br>
+					<br>
+					Мы упрощаем работу с данными и информацией, предоставляя новые возможности для роста бизнеса.
+				</div>
+			</div>
+			<div class="footer__col">
+				<div class="footer__title text text--normal text--primary text--w-regular text--uppercase">
+					Мы в соц сетях
+				</div>
+				<div class="footer__socials d-flex flex-align-center">
+					<a href="https://t.me/dis_group_news" class="footer__social">
+						<svg width="32" height="32">
+							<use href="./img/svgsprite/sprite.symbol.svg#tg"></use>
+						</svg>
 					</a>
-					<a href="" class="footer__link-policy">
-						Обработка персональных данных
+					<a href="https://vk.com/disgroup1" class="footer__social">
+						<svg width="28" height="28">
+							<use href="./img/svgsprite/sprite.symbol.svg#vk"></use>
+						</svg>
+					</a>
+					<a href="https://rutube.ru/channel/38442777/" class="footer__social">
+						<svg width="37" height="32">
+							<use href="./img/svgsprite/sprite.symbol.svg#rutube"></use>
+						</svg>
+					</a>
+				</div>
+			</div>
+			<div class="footer__col">
+				<div class="footer__title text text--normal text--primary text--w-regular text--uppercase">
+					Наши контакты
+				</div>
+				<div class="footer__contacts d-flex d-flex-column">
+					<a href="tel:+7 495 645-0201"
+					   class="footer__contact text text--normal text--primary text--w-medium d-flex flex-align-center">
+						<svg width="20" height="20">
+							<use href="./img/svgsprite/sprite.symbol.svg#phone"></use>
+						</svg>
+						+7 495 645-0201
+					</a>
+					<a href="mailto:forum@dis-group.ru"
+					   class="footer__contact text text--normal text--primary text--w-medium d-flex flex-align-center">
+						<svg width="20" height="20">
+							<use href="./img/svgsprite/sprite.symbol.svg#mail"></use>
+						</svg>
+						forum@dis-group.ru
 					</a>
 				</div>
 			</div>
