--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,6 +1,6 @@
 @@include('blocks/header.html')
 
-<section class="dashbord" style="margin: 100px auto;max-width: 1024px">
+<section class="dashbord visually-hidden" style="margin: 100px auto;max-width: 1024px">
     <a href="" class="button button--primary">
         <svg width="45" height="23" class="button__icon">
             <use href="./img/svgsprite/sprite.symbol.svg#arrow-btn-right"></use>
@@ -31,6 +31,46 @@
         </svg>
         <span>Сделать заказ</span>
     </a>
+</section>
+
+<section class="main-screen">
+    <div class="main-screen__decor"></div>
+    <div class="main-screen__body container">
+        <div class="main-screen__info">
+            <div class="main-screen__top">
+                <div class="main-screen__inner d-flex flex-align-center flex-justify-sb">
+                    <h1 class="main-screen__heading title title--extra-huge title--primary title--w-light title--uppercase">
+                        DATA SUMMIT 2025
+                    </h1>
+                    <div class="main-screen__date d-flex d-flex-column flex-align-center flex-justify-center">
+                        <div class="main-screen__city text text--medium text--primary text--w-semibold text--uppercase">
+                            Москва
+                        </div>
+                        <div class="main-screen__date-day text text--primary text--w-medium">
+                            17
+                        </div>
+                        <div class="main-screen__date-month text text--medium text--primary text--w-semibold text--uppercase">
+                            Апреля
+                        </div>
+                    </div>
+                </div>
+                <div class="main-screen__subtitle title title--big title--primary title--w-regular title--uppercase">
+                    ПУЛЬС ДАННЫХ
+                </div>
+            </div>
+        </div>
+        <div class="main-screen__actions">
+            <a href="" class="button button--primary">
+                <span>Регистрация</span>
+                <svg width="36" height="36" class="button__icon">
+                    <use href="./img/svgsprite/sprite.symbol.svg#btn-arrow"></use>
+                </svg>
+            </a>
+            <div class="main-screen__on-off text text--primary text--normal text--w-semibold text--uppercase">
+                оффлайн и онлайн
+            </div>
+        </div>
+    </div>
 </section>
 
 <section class="info">
@@ -335,26 +375,9 @@
                     </div>
                 </div>
                 <div class="was__right-col">
-                    <div class="was__splide splide js-was-slider-big">
-                        <div class="was__splide-track splide__track">
-                            <div class="was__splide-list splide__list">
-                                <div class="was__splide-slide splide__slide">
-                                    <img src="./img/was/was-1.png" alt="">
-                                </div>
-                                <div class="was__splide-slide splide__slide">
-                                    <img src="./img/was/was-2.png" alt="">
-                                </div>
-                                <div class="was__splide-slide splide__slide">
-                                    <img src="https://placehold.jp/150x150.png" alt="">
-                                </div>
-                                <div class="was__splide-slide splide__slide">
-                                    <img src="https://placehold.jp/1500x1050.png" alt="">
-                                </div>
-                                <div class="was__splide-slide splide__slide">
-                                    <img src="https://placehold.jp/1024x768.png" alt="">
-                                </div>
-                            </div>
-                        </div>
+                    <div class="was__video">
+                        <iframe width="100%" height="100%" loading="lazy"
+                                src="https://rutube.ru/play/embed/549d9a453d4b9f242266c89372678395/?p=Uvnk9Q3jF48qgKlAB9Q5kw" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                     </div>
                 </div>
             </div>
