--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -8,7 +8,7 @@
             </a>
             @@include('mobile-nav.html')
             <div class="header__actions">
-                <a href="" class="button button--primary">
+                <a href="javascript:;" class="button button--primary" data-hystmodal="#feedback">
                     <span>Регистрация</span>
                     <svg width="36" height="36" class="button__icon">
                         <use href="./img/svgsprite/sprite.symbol.svg#btn-arrow"></use>
