--- a/src/html/index.html
+++ b/src/html/index.html
@@ -148,7 +148,7 @@
 
 <section class="dis">
     <div class="dis__body container">
-        <div class="dic__sections">
+        <div class="dis__sections">
             <div class="dis__section panel">
                 <div class="dis__card">
                     <div class="dis__card-wrap">
