--- a/prod/docs.html
+++ b/prod/docs.html
@@ -330,36 +330,7 @@
     <div class="modal__wrap hystmodal__wrap">
         <div class="modal__body hystmodal__window" role="dialog" aria-modal="true">
             <button data-hystclose class="modal__close hystmodal__close">Close</button>
-            <script type="text/javascript" async="async" defer="defer" charset="UTF-8" src="https://timepad.ru/js/tpwf/loader/min/loader.js" data-timepad-customized="30874" data-twf2s-event--id="3231087" data-timepad-widget-v2="event_register"></script>
-        </div>
-    </div>
-</div>
-
-<!-- Модалка успешной отправки -->
-<div class="modal modal--thanks hystmodal js-modal-success" id="thanks" aria-hidden="true">
-    <div class="modal__wrap hystmodal__wrap">
-        <div class="modal__body hystmodal__window" role="dialog" aria-modal="true">
-            <button data-hystclose class="modal__close hystmodal__close">Close</button>
-            <div class="modal__inner">
-                <div class="modal__inner-text">
-                    <div class="modal__title title title--large title--primary title--w-bold">
-                        Спасибо! Ваша заявка принята.
-                    </div>
-                    <div class="modal__subtitle text text--large text--primary text--w-regular">
-                        Наши менеджеры свяжутся с&#160;вами в&#160;ближайшее время для обсуждения деталей
-                    </div>
-                    <button class="modal__thanks-btn button button--primary" data-hystclose>
-                        Вернуться назад
-                    </button>
-                </div>
-                <div class="modal__pic">
-                    <picture>
-<source srcset="./img/other/thanks.webp 1x, ./img/other/thanks@2x.webp 2x" type="image/webp">
-<source srcset="./img/other/thanks.png 1x, ./img/other/thanks@2x.png 2x" type="image/png">
-<img src="./img/other/thanks.png" alt="">
-</picture>
-                </div>
-            </div>
+<!--			<script type="text/javascript" async="async" defer="defer" charset="UTF-8" src="https://timepad.ru/js/tpwf/loader/min/loader.js" data-timepad-customized="30874" data-twf2s-event&#45;&#45;id="3231087" data-timepad-widget-v2="event_register"></script>-->
         </div>
     </div>
 </div>
