--- a/prod/index.html
+++ b/prod/index.html
@@ -383,50 +383,6 @@
             <div class="speakers__item">
                 <div class="speakers__item-pic">
                     <picture>
-                        <img src="./img/speakers/kulik.jpg" alt="">
-                    </picture>
-                </div>
-                <div class="speakers__item-logo d-flex flex-justify-center flex-align-center">
-                    <picture>
-<source srcset="./img/speakers/dis.webp 1x, ./img/speakers/dis@2x.webp 2x" type="image/webp">
-<source srcset="./img/speakers/dis.png 1x, ./img/speakers/dis@2x.png 2x" type="image/png">
-<img src="./img/speakers/dis.png" alt="" class="speakers__item-logo-img">
-</picture>
-                </div>
-                <div class="speakers__item-info">
-                    <h3 class="speakers__item-name text text--medium text--primary text--w-semibold">
-                        Александр Кулик
-                    </h3>
-                    <div class="speakers__item-position text text--small text--primary text--w-medium">
-                        Директор практики Digital & Data Transformation DIS Group
-                    </div>
-                </div>
-            </div>
-            <div class="speakers__item">
-                <div class="speakers__item-pic">
-                    <picture>
-                        <img src="./img/speakers/hasanov.jpeg" alt="">
-                    </picture>
-                </div>
-                <div class="speakers__item-logo d-flex flex-justify-center flex-align-center">
-                    <picture>
-<source srcset="./img/speakers/dis.webp 1x, ./img/speakers/dis@2x.webp 2x" type="image/webp">
-<source srcset="./img/speakers/dis.png 1x, ./img/speakers/dis@2x.png 2x" type="image/png">
-<img src="./img/speakers/dis.png" alt="" class="speakers__item-logo-img">
-</picture>
-                </div>
-                <div class="speakers__item-info">
-                    <h3 class="speakers__item-name text text--medium text--primary text--w-semibold">
-                        Василий Хасанов
-                    </h3>
-                    <div class="speakers__item-position text text--small text--primary text--w-medium">
-                        Заместитель технического директора, DIS Group
-                    </div>
-                </div>
-            </div>
-            <div class="speakers__item">
-                <div class="speakers__item-pic">
-                    <picture>
                         <img src="./img/speakers/chulok.jpg" alt="">
                     </picture>
                 </div>
@@ -480,14 +436,14 @@
                     <use href="./img/svgsprite/sprite.symbol.svg#curved-arrow-down"></use>
                 </svg>
             </div>
-            <div class="tracks__onof d-flex d-flex-column">
-                <span class="tracks__offline title title--uppercase title--w-semibold">
-                    Оффлайн
-                </span>
-                <span class="tracks__online title title--uppercase title--w-semibold">
-                    Онлайн
-                </span>
-            </div>
+<!--            <div class="tracks__onof d-flex d-flex-column">-->
+<!--                <span class="tracks__offline title title&#45;&#45;uppercase title&#45;&#45;w-semibold">-->
+<!--                    Оффлайн-->
+<!--                </span>-->
+<!--                <span class="tracks__online title title&#45;&#45;uppercase title&#45;&#45;w-semibold">-->
+<!--                    Онлайн-->
+<!--                </span>-->
+<!--            </div>-->
         </div>
         <div class="tracks__grid">
             <div class="tracks__item">
@@ -1918,9 +1874,6 @@
                             <svg width="32" height="26">
                                 <use href="./img/svgsprite/sprite.symbol.svg#curved-arrow-down-orange"></use>
                             </svg>
-                            <svg width="32" height="26">
-                                <use href="./img/svgsprite/sprite.symbol.svg#curved-arrow-down-orange"></use>
-                            </svg>
                         </div>
                     </div>
                     <div class="was__description text text--large text--primary text--w-medium">
@@ -2161,36 +2114,7 @@
     <div class="modal__wrap hystmodal__wrap">
         <div class="modal__body hystmodal__window" role="dialog" aria-modal="true">
             <button data-hystclose class="modal__close hystmodal__close">Close</button>
-            <script type="text/javascript" async="async" defer="defer" charset="UTF-8" src="https://timepad.ru/js/tpwf/loader/min/loader.js" data-timepad-customized="30874" data-twf2s-event--id="3231087" data-timepad-widget-v2="event_register"></script>
-        </div>
-    </div>
-</div>
-
-<!-- Модалка успешной отправки -->
-<div class="modal modal--thanks hystmodal js-modal-success" id="thanks" aria-hidden="true">
-    <div class="modal__wrap hystmodal__wrap">
-        <div class="modal__body hystmodal__window" role="dialog" aria-modal="true">
-            <button data-hystclose class="modal__close hystmodal__close">Close</button>
-            <div class="modal__inner">
-                <div class="modal__inner-text">
-                    <div class="modal__title title title--large title--primary title--w-bold">
-                        Спасибо! Ваша заявка принята.
-                    </div>
-                    <div class="modal__subtitle text text--large text--primary text--w-regular">
-                        Наши менеджеры свяжутся с&#160;вами в&#160;ближайшее время для обсуждения деталей
-                    </div>
-                    <button class="modal__thanks-btn button button--primary" data-hystclose>
-                        Вернуться назад
-                    </button>
-                </div>
-                <div class="modal__pic">
-                    <picture>
-<source srcset="./img/other/thanks.webp 1x, ./img/other/thanks@2x.webp 2x" type="image/webp">
-<source srcset="./img/other/thanks.png 1x, ./img/other/thanks@2x.png 2x" type="image/png">
-<img src="./img/other/thanks.png" alt="">
-</picture>
-                </div>
-            </div>
+<!--			<script type="text/javascript" async="async" defer="defer" charset="UTF-8" src="https://timepad.ru/js/tpwf/loader/min/loader.js" data-timepad-customized="30874" data-twf2s-event&#45;&#45;id="3231087" data-timepad-widget-v2="event_register"></script>-->
         </div>
     </div>
 </div>
