--- a/src/html/index.html
+++ b/src/html/index.html
@@ -288,42 +288,6 @@
             <div class="speakers__item">
                 <div class="speakers__item-pic">
                     <picture>
-                        <img src="./img/speakers/kulik.jpg" alt="">
-                    </picture>
-                </div>
-                <div class="speakers__item-logo d-flex flex-justify-center flex-align-center">
-                    <img src="./img/speakers/dis.png" alt="" class="speakers__item-logo-img">
-                </div>
-                <div class="speakers__item-info">
-                    <h3 class="speakers__item-name text text--medium text--primary text--w-semibold">
-                        Александр Кулик
-                    </h3>
-                    <div class="speakers__item-position text text--small text--primary text--w-medium">
-                        Директор практики Digital & Data Transformation DIS Group
-                    </div>
-                </div>
-            </div>
-            <div class="speakers__item">
-                <div class="speakers__item-pic">
-                    <picture>
-                        <img src="./img/speakers/hasanov.jpeg" alt="">
-                    </picture>
-                </div>
-                <div class="speakers__item-logo d-flex flex-justify-center flex-align-center">
-                    <img src="./img/speakers/dis.png" alt="" class="speakers__item-logo-img">
-                </div>
-                <div class="speakers__item-info">
-                    <h3 class="speakers__item-name text text--medium text--primary text--w-semibold">
-                        Василий Хасанов
-                    </h3>
-                    <div class="speakers__item-position text text--small text--primary text--w-medium">
-                        Заместитель технического директора, DIS Group
-                    </div>
-                </div>
-            </div>
-            <div class="speakers__item">
-                <div class="speakers__item-pic">
-                    <picture>
                         <img src="./img/speakers/chulok.jpg" alt="">
                     </picture>
                 </div>
@@ -373,14 +337,14 @@
                     <use href="./img/svgsprite/sprite.symbol.svg#curved-arrow-down"></use>
                 </svg>
             </div>
-            <div class="tracks__onof d-flex d-flex-column">
-                <span class="tracks__offline title title--uppercase title--w-semibold">
-                    Оффлайн
-                </span>
-                <span class="tracks__online title title--uppercase title--w-semibold">
-                    Онлайн
-                </span>
-            </div>
+<!--            <div class="tracks__onof d-flex d-flex-column">-->
+<!--                <span class="tracks__offline title title&#45;&#45;uppercase title&#45;&#45;w-semibold">-->
+<!--                    Оффлайн-->
+<!--                </span>-->
+<!--                <span class="tracks__online title title&#45;&#45;uppercase title&#45;&#45;w-semibold">-->
+<!--                    Онлайн-->
+<!--                </span>-->
+<!--            </div>-->
         </div>
         <div class="tracks__grid">
             <div class="tracks__item">
@@ -1536,9 +1500,6 @@
                             Каким был Дата <br> Саммит в 2024
                         </div>
                         <div class="was__arrows d-flex d-flex-column flex-align-center flex-justify-center">
-                            <svg width="32" height="26">
-                                <use href="./img/svgsprite/sprite.symbol.svg#curved-arrow-down-orange"></use>
-                            </svg>
                             <svg width="32" height="26">
                                 <use href="./img/svgsprite/sprite.symbol.svg#curved-arrow-down-orange"></use>
                             </svg>
