--- a/src/html/index.html
+++ b/src/html/index.html
@@ -601,14 +601,14 @@
                 </div>
             </div>
             <div class="program__grid-tr">
-                <div class="program__tr program__tr--title">
+                <div class="program__tr program__tr--title program__tr--desktop">
                     <div class="program__tr-inner d-flex">
                         <div class="program__title title title--pre-large title--blue title--w-semibold title--uppercase">
                             Технологический  трек
                         </div>
                     </div>
                 </div>
-                <div class="program__tr program__tr--title">
+                <div class="program__tr program__tr--title program__tr--desktop">
                     <div class="program__tr-inner d-flex">
                         <div class="program__title title title--pre-large title--mint title--w-semibold title--uppercase">
                             Бизнес-трек
@@ -616,6 +616,12 @@
                     </div>
                 </div>
                 <div class="program__tr program__tr--elem-grid">
+                    <div class="program__hol text text--normal text--blue text--w-regular text--uppercase">
+                        Зал ROCKEFELLER
+                    </div>
+                    <div class="program__subtitle text text--normal text--orange text--w-regular text--uppercase">
+                        Пленарная сессия
+                    </div>
                     <div class="program__tr-inner d-flex d-flex-column">
                         <div class="program__time title title--pre-large title--blue title--w-semibold title--uppercase">
                             13:00 — 13:30
